--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "@repo/backend-common",
+  "name": "@repo/common",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "exports":{
-     ".": "./src/index.ts",
-    "./config": "./src/config.ts"
-  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "exports": {
+    ".": "./src/index.ts",
+    "./types": "./src/types.ts"
   },
   "devDependencies": {
     "@repo/typescript-config": "workspace:*"
@@ -17,6 +17,6 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@types/node": "^22.13.1"
+    "zod": "^3.24.1"
   }
 }
