--- a/apps/excildraw-frontend/package.json
+++ b/apps/excildraw-frontend/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "clean": "if exist .next rd /s /q .next && if exist node_modules\\.cache rd /s /q node_modules\\.cache"
+    "clean": "rimraf .next && rimraf node_modules/.cache"
   },
   "dependencies": {
     "axios": "^1.7.9",
@@ -23,6 +23,7 @@
     "eslint": "^9",
     "eslint-config-next": "15.1.7",
     "postcss": "^8",
+    "rimraf": "^6.0.1",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
